# qt-hello-chatroom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: windows-build.yml
src/: ChatWindow.cpp  ChatWindow.h  main.cpp
